# taron

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: release.yml
benchmarks/: README.md  energy-comparison.md  finality-results-2026-03-04.md  run_benchmark.sh
crates/taron-cli/: Cargo.toml
crates/taron-cli/src/: bench.rs  main.rs  miner_tui.rs
crates/taron-core/: Cargo.toml  build.rs
crates/taron-core/benches/: finality_bench.rs
crates/taron-core/src/: block.rs  blockchain.rs  error.rs  finality.rs  genesis.rs  hash.rs  ledger.rs  lib.rs  posc.rs  transaction.rs  wallet.rs
crates/taron-crypto/: Cargo.toml
crates/taron-crypto/src/: error.rs  hybrid.rs  lib.rs  noise_transport.rs
crates/taron-miner/: Cargo.toml
crates/taron-miner/benches/: mining_bench.rs
crates/taron-miner/src/: aligned.rs  bench.rs  burst.rs  engine.rs  lib.rs  thermal.rs
crates/taron-node/: Cargo.toml
crates/taron-node/src/: discovery.rs  finality.rs  lib.rs  mempool.rs  node.rs  peer.rs  protocol.rs  rpc.rs  seeds.rs  state_file.rs  sync.rs
crates/taron-pool/: Cargo.toml
crates/taron-pool/src/: db.rs  dedup.rs  main.rs  scoring.rs  vardiff.rs
