[package]
name = "taron"
version = "0.1.0"
edition = "2021"
description = "TARON — instant CPU-only cryptocurrency"

[[bin]]
name = "taron"
path = "src/main.rs"

[dependencies]
taron-core = { path = "../taron-core" }
taron-node = { path = "../taron-node" }
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
indicatif = "0.17"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
hex = "0.4"
serde_json = "1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
ctrlc = "3.4"
crossterm = { version = "0.28", features = ["event-stream"] }
num_cpus = "1"
chrono = "0.4"
hostname = "0.4"
ratatui = "0.29"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
