[package]
name = "taron-miner"
version = "0.1.0"
edition = "2021"
description = "CoolMine: Thermal-adaptive mining engine for TARON"
license = "MIT OR Apache-2.0"
repository = "https://github.com/taron-dev/taron"
keywords = ["blockchain", "mining", "thermal", "crypto", "taron"]
categories = ["cryptography", "network-programming"]

[dependencies]
taron-core = { path = "../taron-core" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
crossbeam-channel = "0.5"
parking_lot = "0.12"
num_cpus = "1.0"
libc = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.0"
assert_matches = "1.5"
tokio-test = "0.4"

[[bench]]
name = "mining_bench"
harness = false

[lib]
name = "taron_miner"
path = "src/lib.rs"