[package]
name = "taron-node"
version = "0.1.0"
edition = "2021"
description = "TARON P2P node — gossip, mempool, peer discovery"

[dependencies]
taron-core = { path = "../taron-core" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
tracing = "0.1"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "limit"] }
socket2 = "0.5"
